removed swp file

--- a/Home.html
+++ b/Home.html
@@ -65,8 +65,8 @@
                 </a>
                 <h3>Exhibit A</h3>
                 <p>This picture was taken at Whiteside Mountain in Cashiers, NC. 
-                I really enjoy hiking and this one is really illustrates why. The
-                scenes at the top are just breathtaking. </p>
+                I really enjoy hiking and this image really illustrates why. The
+                scenes at the top of the mountain are just breathtaking. </p>
                 <a href="#" class="btn btn-danger">View</a>
         </div>
         <div class="row">
