--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Diego's World</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4">
-                <a href="#" class="thumbnail">
+                <a href="#pic1" class="thumbnail">
                     <img src="images/one.JPG">
                 </a>
                 <h3>Exhibit A</h3>
@@ -106,6 +106,19 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="pic1" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <img src="images/one.JPG">
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary" data-dismiss="modal">Close</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     <div class="navbar navbar-custom navbar-fixed-bottom" role="navigation">
         <div class="container">
